--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Untrusted - a user javascript adventure game</title>
+	<title>Untrusted Challenges - an educational javascript adventure game</title>
 	<meta charset='utf8'></meta>
 	<link rel="shortcut icon" href="favicon.ico" />
 
@@ -23,7 +23,7 @@
 	<script src="scripts/build/untrusted.js"></script>
 </head>
 <body>
-	<a id="forkMe" href="https://github.com/AlexNisnevich/untrusted" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 9999;" src="//s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+	<a id="forkMe" href="https://github.com/AGoliath/untrusted" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 9999;" src="//s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 	<div id="container">
         <div id="panes">
         	<a id="muteButton"><img src="images/mute-off.png" /></a>
